# lab7

./: README.md  pyproject.toml
data/: dataind.sql
prog/: dataind.sql  high.py  ind.py
