[tool.poetry]
name = "lab7"
version = "0.1.0"
description = "Stepanov Leonid"
authors = ["FiaLDI <leon.youtube2017@yandex.ru>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
